<resources>
    <string name="app_name">ToDoList</string>
    <string name="todo">TODO</string>
    <string name="tasks">Tasks</string>
    <string name="save">SAVE</string>
    <string name="new_task">New Task</string>
    <string name="please_add_a_new_task">Please add a new task</string>
    <string name="deadline">Deadline</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
</resources>