<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterTaskActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="251dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:text="@string/please_add_a_new_task"
        android:textAlignment="gravity"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/newTaskText"
        android:layout_width="211dp"
        android:layout_height="66dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:background="@null"
        android:hint="@string/new_task"
        android:inputType="textLongMessage"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/newTaskButton"
        android:layout_width="91dp"
        android:layout_height="50dp"
        android:layout_below="@id/newTaskText"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="#673AB7"
        android:onClick="sendMessage"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newTaskButton3" />

    <Button
        android:id="@+id/newTaskButton3"
        android:layout_width="91dp"
        android:layout_height="50dp"
        android:layout_below="@id/newTaskText"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="#673AB7"
        android:onClick="clear"
        android:text="Clear All"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="237dp"
        android:layout_height="43dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/newTaskText"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="110dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        android:text="@string/deadline"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editTextDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newTaskText" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="110dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="Priority"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate">

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="@string/high" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/low" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="79dp"
        android:layout_height="76dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="New Task"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>